[package]
name = "gitclock"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
confy = "0.6"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
rand = "0.8"

[dev-dependencies]
mockall = "0.11"
serial_test = "2.0"
